--- a/docker/notebooks/Workshop-2/2. Traffic Signs with LeNet-BigDL.ipynb
+++ b/docker/notebooks/Workshop-2/2. Traffic Signs with LeNet-BigDL.ipynb
@@ -65,19 +65,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
+    "import gzip\n",
     "\n",
     "traffic_dir = 'traffic_signs_data'\n",
     "\n",
-    "with open(traffic_dir + '/train2.p', mode='rb') as f:\n",
+    "with gzip.open(traffic_dir + '/train2.p.gz', mode='rb') as f:\n",
     "    train = pickle.load(f)\n",
-    "with open(traffic_dir + '/test2.p', mode='rb') as f:\n",
+    "with gzip.open(traffic_dir + '/test2.p.gz', mode='rb') as f:\n",
     "    test = pickle.load(f)\n",
     "    \n",
     "X_train, y_train = train['images'], train['labels']\n",
