--- a/docker/notebooks/Workshop-2/3. Tensforflow for Traffic Sign Recognition.ipynb
+++ b/docker/notebooks/Workshop-2/3. Tensforflow for Traffic Sign Recognition.ipynb
@@ -18,20 +18,18 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "import pickle\n",
+    "import pickle, gzip\n",
     "\n",
     "traffic_dir = 'traffic_signs_data'\n",
     "\n",
     "def load_traffic_signs():\n",
     "    \n",
-    "    with open(traffic_dir + '/train2.p', mode='rb') as f:\n",
+    "    with gzip.open(traffic_dir + '/train2.p.gz', mode='rb') as f:\n",
     "        train = pickle.load(f)\n",
-    "    with open(traffic_dir + '/test2.p', mode='rb') as f:\n",
+    "    with gzip.open(traffic_dir + '/test2.p.gz', mode='rb') as f:\n",
     "        test = pickle.load(f)\n",
     "\n",
     "    X_train, y_train = train['images'], train['labels']\n",
@@ -364,7 +362,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "with tf.Session() as sess:\n",
@@ -428,18 +428,6 @@
    "display_name": "Python 2",
    "language": "python",
    "name": "python2"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
   }
  },
  "nbformat": 4,
