--- a/docker/notebooks/Workshop-2/3. Tensforflow for Traffic Sign Recognition.ipynb
+++ b/docker/notebooks/Workshop-2/3. Tensforflow for Traffic Sign Recognition.ipynb
@@ -18,7 +18,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pickle, gzip\n",
@@ -128,45 +130,45 @@
     "    sigma = 0.1\n",
     "    \n",
     "    # Layer 1: Convolutional. Input = 32x32x3. Output = 28x28x6.\n",
-    "    conv1_W = tf.Variable(tf.truncated_normal(shape=(5, 5, 3, 6), mean = mu, stddev = sigma))\n",
-    "    conv1_b = tf.Variable(tf.zeros(6))\n",
+    "    conv1_W = tf.Variable(tf.truncated_normal(shape=(5, 5, 3, 6), mean = mu, stddev = sigma), name=\"conv1_W\")\n",
+    "    conv1_b = tf.Variable(tf.zeros(6), name=\"conv1_b\")\n",
     "    conv1 = tf.nn.conv2d(x, conv1_W, strides = [1, 1, 1, 1], padding='VALID') + conv1_b\n",
     "\n",
-    "    conv1 = tf.nn.relu(conv1)\n",
+    "    conv1 = tf.nn.relu(conv1, name=\"conv1_relu\")\n",
     "\n",
     "    # Pooling. Input = 28x28x6. Output = 14x14x6.\n",
-    "    conv1 = tf.nn.max_pool(conv1, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='VALID')\n",
+    "    conv1 = tf.nn.max_pool(conv1, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='VALID', name=\"conv1\")\n",
     "\n",
     "    # Layer 2: Convolutional. Output = 10x10x16.\n",
-    "    conv2_W = tf.Variable(tf.truncated_normal(shape=(5, 5, 6, 16), mean=mu, stddev=sigma))\n",
-    "    conv2_b = tf.Variable(tf.zeros(16))\n",
+    "    conv2_W = tf.Variable(tf.truncated_normal(shape=(5, 5, 6, 16), mean=mu, stddev=sigma), name=\"conv2_W\")\n",
+    "    conv2_b = tf.Variable(tf.zeros(16), name=\"conv2_b\")\n",
     "    conv2 = tf.nn.conv2d(conv1, conv2_W, strides=[1, 1, 1, 1], padding='VALID') + conv2_b\n",
     "    \n",
-    "    conv2 = tf.nn.relu(conv2)\n",
+    "    conv2 = tf.nn.relu(conv2, name=\"conv2_relu\")\n",
     "\n",
     "    # TODO: Pooling. Input = 10x10x16. Output = 5x5x16.\n",
-    "    conv2 = tf.nn.max_pool(conv2, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='VALID')\n",
+    "    conv2 = tf.nn.max_pool(conv2, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='VALID', name=\"conv2\")\n",
     "\n",
     "    # Flatten. Input = 5x5x16. Output = 400.\n",
     "    fc0 = flatten(conv2)\n",
     "    \n",
     "    # Layer 3: Fully Connected. Input = 400. Output = 120.\n",
-    "    fc1_W = tf.Variable(tf.truncated_normal(shape=(400, 120), mean=mu, stddev=sigma))\n",
-    "    fc1_b = tf.Variable(tf.zeros(120))\n",
+    "    fc1_W = tf.Variable(tf.truncated_normal(shape=(400, 120), mean=mu, stddev=sigma), name=\"fc1_W\")\n",
+    "    fc1_b = tf.Variable(tf.zeros(120), name=\"fc1_b\")\n",
     "    fc1 = tf.matmul(fc0, fc1_W) + fc1_b\n",
     "    \n",
-    "    fc1 = tf.nn.relu(fc1)\n",
+    "    fc1 = tf.nn.relu(fc1, name=\"fc1\")\n",
     "\n",
     "    # TODO: Layer 4: Fully Connected. Input = 120. Output = 84.\n",
-    "    fc2_W = tf.Variable(tf.truncated_normal(shape=(120, 84), mean=mu, stddev=sigma))\n",
-    "    fc2_b = tf.Variable(tf.zeros(84))\n",
+    "    fc2_W = tf.Variable(tf.truncated_normal(shape=(120, 84), mean=mu, stddev=sigma), name=\"fc2_W\")\n",
+    "    fc2_b = tf.Variable(tf.zeros(84), name=\"fc2_b\")\n",
     "    fc2 = tf.matmul(fc1, fc2_W) + fc2_b\n",
     "    \n",
-    "    fc2 = tf.nn.relu(fc2)\n",
+    "    fc2 = tf.nn.relu(fc2, name=\"fc2\")\n",
     "\n",
     "    # TODO: Layer 5: Fully Connected. Input = 84. Output = 43.\n",
-    "    fc3_W = tf.Variable(tf.truncated_normal(shape=(84, 43), mean=mu, stddev=sigma))\n",
-    "    fc3_b = tf.Variable(tf.zeros(43))\n",
+    "    fc3_W = tf.Variable(tf.truncated_normal(shape=(84, 43), mean=mu, stddev=sigma), name=\"fc3_W\")\n",
+    "    fc3_b = tf.Variable(tf.zeros(43), name=\"fc3_b\")\n",
     "    logits = tf.add(tf.matmul(fc2, fc3_W), fc3_b, name=\"logits\")\n",
     "    \n",
     "    return logits"
@@ -207,19 +209,17 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "rate = 0.001\n",
     "\n",
     "logits = LeNet(x)\n",
     "prediction = tf.nn.softmax(logits, name=\"prediction\")\n",
-    "cross_entropy = tf.nn.softmax_cross_entropy_with_logits(logits=logits, labels=one_hot_y)\n",
-    "loss_operation = tf.reduce_mean(cross_entropy)\n",
-    "optimizer = tf.train.AdamOptimizer(learning_rate = rate, beta1=0.9, beta2=0.999, epsilon=1e-08)\n",
-    "training_operation = optimizer.minimize(loss_operation)"
+    "cross_entropy = tf.nn.softmax_cross_entropy_with_logits(logits=logits, labels=one_hot_y, name=\"cross_entropy\")\n",
+    "loss_operation = tf.reduce_mean(cross_entropy, name=\"loss_operation\")\n",
+    "optimizer = tf.train.AdamOptimizer(learning_rate = rate, beta1=0.9, beta2=0.999, epsilon=1e-08, name=\"optimizer\")\n",
+    "training_operation = optimizer.minimize(loss_operation, name=\"training_operation\")"
    ]
   },
   {
@@ -230,13 +230,13 @@
    },
    "outputs": [],
    "source": [
-    "correct_prediction = tf.equal(tf.argmax(logits, 1), tf.argmax(one_hot_y, 1))\n",
-    "accuracy_operation = tf.reduce_mean(tf.cast(correct_prediction, tf.float32))\n",
+    "correct_prediction = tf.equal(tf.argmax(logits, 1), tf.argmax(one_hot_y, 1), name=\"correct_prediction\")\n",
+    "accuracy_operation = tf.reduce_mean(tf.cast(correct_prediction, tf.float32), name=\"accuracy_operation\")\n",
     "saver = tf.train.Saver()\n",
     "\n",
     "BATCH_SIZE = 64\n",
     "\n",
-    "def evaluate(sess, X_data, y_data):\n",
+    "def evaluate(X_data, y_data):\n",
     "    num_examples = len(X_data)\n",
     "    total_accuracy = 0\n",
     "    sess = tf.get_default_session()\n",
@@ -260,7 +260,7 @@
    "source": [
     "from sklearn.utils import shuffle\n",
     "\n",
-    "EPOCHS = 15\n",
+    "EPOCHS = 2\n",
     "\n",
     "def train(x_train, y_train, x_valid, y_valid):\n",
     "    with tf.Session() as sess:\n",
@@ -276,7 +276,7 @@
     "                batch_x, batch_y = x_train[offset:end], y_train[offset:end]\n",
     "                sess.run(training_operation, feed_dict={x: batch_x, y: batch_y})\n",
     "\n",
-    "            validation_accuracy = evaluate(sess, x_valid, y_valid)\n",
+    "            validation_accuracy = evaluate(x_valid, y_valid)\n",
     "\n",
     "            print(\"EPOCH {} ...\".format(i+1))\n",
     "            print(\"Validation Accuracy = {:.3f}\".format(validation_accuracy))\n",
@@ -298,53 +298,14 @@
       "Training...\n",
       "\n",
       "EPOCH 1 ...\n",
-      "Validation Accuracy = 0.724\n",
+      "Validation Accuracy = 0.796\n",
       "\n",
       "EPOCH 2 ...\n",
-      "Validation Accuracy = 0.892\n",
-      "\n",
-      "EPOCH 3 ...\n",
-      "Validation Accuracy = 0.930\n",
-      "\n",
-      "EPOCH 4 ...\n",
-      "Validation Accuracy = 0.941\n",
-      "\n",
-      "EPOCH 5 ...\n",
-      "Validation Accuracy = 0.955\n",
-      "\n",
-      "EPOCH 6 ...\n",
-      "Validation Accuracy = 0.970\n",
-      "\n",
-      "EPOCH 7 ...\n",
-      "Validation Accuracy = 0.960\n",
-      "\n",
-      "EPOCH 8 ...\n",
-      "Validation Accuracy = 0.973\n",
-      "\n",
-      "EPOCH 9 ...\n",
-      "Validation Accuracy = 0.975\n",
-      "\n",
-      "EPOCH 10 ...\n",
-      "Validation Accuracy = 0.975\n",
-      "\n",
-      "EPOCH 11 ...\n",
-      "Validation Accuracy = 0.974\n",
-      "\n",
-      "EPOCH 12 ...\n",
-      "Validation Accuracy = 0.969\n",
-      "\n",
-      "EPOCH 13 ...\n",
-      "Validation Accuracy = 0.977\n",
-      "\n",
-      "EPOCH 14 ...\n",
-      "Validation Accuracy = 0.977\n",
-      "\n",
-      "EPOCH 15 ...\n",
-      "Validation Accuracy = 0.979\n",
+      "Validation Accuracy = 0.911\n",
       "\n",
       "Model saved\n",
-      "CPU times: user 16min 58s, sys: 3min 49s, total: 20min 47s\n",
-      "Wall time: 7min 26s\n"
+      "CPU times: user 2min 11s, sys: 36.2 s, total: 2min 47s\n",
+      "Wall time: 1min 2s\n"
      ]
     }
    ],
@@ -362,13 +323,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "with tf.Session() as sess:\n",
-    "    print(\"Test accuracy = {:.3f}\".format(evaluate(sess, X_test_norm, y_test)))"
+    "    res = evaluate(X_test_norm, y_test)\n",
+    "    print(\"Test accuracy = {:.3f}\".format(res))"
    ]
   },
   {
@@ -420,14 +380,72 @@
    "source": [
     "test_image_picture('???', s_loaded)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualize Filter State"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def output_features(image_input, tf_activations, activation_min=None, activation_max=None, plt_num=1):\n",
+    "    activation = tf_activation.eval(session=sess, feed_dict={x : image_input})\n",
+    "    feature_image_count = activation.shape[3]\n",
+    "    plt.figure(plt_num, figsize=(15,15))\n",
+    "    fi = 0\n",
+    "    plt.subplot(6,8, featuremap+1) # sets the number of feature maps to show on each row and column\n",
+    "    plt.title('FeatureMap ' + str(featuremap)) # displays the feature map number\n",
+    "#     for fi in range(feature_image_count):\n",
+    "#         plt.subplot(6, 8, fi + 1)\n",
+    "#         plt.title('Feature')\n",
+    "    plt.imshow(activation[0,:,:, featuremap], \n",
+    "               interpolation=\"nearest\", \n",
+    "               vmin=activation_min, \n",
+    "               vmax=activation_max, \n",
+    "               cmap=\"gray\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "with tf.Session() as sess:\n",
+    "    saver.restore(sess, tf.train.latest_checkpoint('.'))\n",
+    "    output_features([X_ex1[4]], LeNet.conv1, 4) # , 0, 100)\n",
+    "    plt.show()"
+   ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
