--- a/docker/notebooks/Workshop-2/3. Tensforflow for Traffic Sign Recognition.ipynb
+++ b/docker/notebooks/Workshop-2/3. Tensforflow for Traffic Sign Recognition.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -43,20 +43,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('Train:', 39209, 'Test:', 12630, 'Image shape:', (32, 32), 'Classes:', 43)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "image_shape = X_train.shape[1:3]\n",
     "n_classes = np.unique(y_train).shape[0]\n",
@@ -72,23 +61,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "A, B = 0.1, 0.9\n",
+    "\n",
     "def normalize(image_data, min_x=None, max_x=None):\n",
     "    min_x = np.min(image_data) if min_x is None else min_x\n",
     "    max_x = np.max(image_data) if max_x is None else max_x\n",
-    "    a, b = 0.1, 0.9\n",
-    "    result = a + (image_data - min_x) * (b - a) / (max_x - min_x)\n",
+    "    result = A + (image_data - min_x) * (B - A) / (max_x - min_x)\n",
     "    return result, min_x, max_x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def restore_normal(image_data, min_x, max_x):\n",
+    "    result = (image_data - A) * (max_x - min_x) / (B - A) + min_x\n",
+    "    return result.astype(np.uint8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -99,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -117,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -138,6 +141,7 @@
     "\n",
     "    # Pooling. Input = 28x28x6. Output = 14x14x6.\n",
     "    conv1 = tf.nn.max_pool(conv1, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='VALID', name=\"conv1\")\n",
+    "    LeNet.conv1 = conv1\n",
     "\n",
     "    # Layer 2: Convolutional. Output = 10x10x16.\n",
     "    conv2_W = tf.Variable(tf.truncated_normal(shape=(5, 5, 6, 16), mean=mu, stddev=sigma), name=\"conv2_W\")\n",
@@ -148,9 +152,11 @@
     "\n",
     "    # TODO: Pooling. Input = 10x10x16. Output = 5x5x16.\n",
     "    conv2 = tf.nn.max_pool(conv2, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='VALID', name=\"conv2\")\n",
+    "    LeNet.conv2 = conv2\n",
     "\n",
     "    # Flatten. Input = 5x5x16. Output = 400.\n",
     "    fc0 = flatten(conv2)\n",
+    "    LeNet.fc0 = fc0\n",
     "    \n",
     "    # Layer 3: Fully Connected. Input = 400. Output = 120.\n",
     "    fc1_W = tf.Variable(tf.truncated_normal(shape=(400, 120), mean=mu, stddev=sigma), name=\"fc1_W\")\n",
@@ -158,6 +164,7 @@
     "    fc1 = tf.matmul(fc0, fc1_W) + fc1_b\n",
     "    \n",
     "    fc1 = tf.nn.relu(fc1, name=\"fc1\")\n",
+    "    LeNet.fc1 = fc1\n",
     "\n",
     "    # TODO: Layer 4: Fully Connected. Input = 120. Output = 84.\n",
     "    fc2_W = tf.Variable(tf.truncated_normal(shape=(120, 84), mean=mu, stddev=sigma), name=\"fc2_W\")\n",
@@ -165,11 +172,14 @@
     "    fc2 = tf.matmul(fc1, fc2_W) + fc2_b\n",
     "    \n",
     "    fc2 = tf.nn.relu(fc2, name=\"fc2\")\n",
+    "    LeNet.fc2 = fc2\n",
     "\n",
     "    # TODO: Layer 5: Fully Connected. Input = 84. Output = 43.\n",
     "    fc3_W = tf.Variable(tf.truncated_normal(shape=(84, 43), mean=mu, stddev=sigma), name=\"fc3_W\")\n",
     "    fc3_b = tf.Variable(tf.zeros(43), name=\"fc3_b\")\n",
+    "    \n",
     "    logits = tf.add(tf.matmul(fc2, fc3_W), fc3_b, name=\"logits\")\n",
+    "    LeNet.logits = logits\n",
     "    \n",
     "    return logits"
    ]
@@ -183,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -195,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -208,8 +218,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "rate = 0.001\n",
@@ -224,10 +236,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "correct_prediction = tf.equal(tf.argmax(logits, 1), tf.argmax(one_hot_y, 1), name=\"correct_prediction\")\n",
@@ -251,8 +261,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Capture convolution activation evolution"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from moviepy.editor import VideoFileClip\n",
+    "\n",
+    "CAPTURE_ACTIVATION = LeNet.conv1\n",
+    "TEST_IMAGE = X_train_norm[100]\n",
+    "\n",
+    "def activation_for_image(results, sess, image_input, tf_activation=CAPTURE_ACTIVATION):\n",
+    "    activation = tf_activation.eval(session=sess, feed_dict={x : image_input})\n",
+    "    feature_image_count = activation.shape[3]\n",
+    "    for layer in range(feature_image_count):\n",
+    "        act_image = activation[0,:,:, layer]\n",
+    "        restored_image = restore_normal(act_image, min_x, max_x)\n",
+    "        if len(results) < layer + 1:\n",
+    "            results.append([])\n",
+    "        results[layer].append(act_image)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -260,57 +301,97 @@
    "source": [
     "from sklearn.utils import shuffle\n",
     "\n",
-    "EPOCHS = 2\n",
+    "EPOCHS = 5\n",
     "\n",
     "def train(x_train, y_train, x_valid, y_valid):\n",
+    "    num_examples = x_train.shape[0]\n",
+    "    \n",
+    "    activations = []\n",
+    "    activations_per_epoch = 10\n",
+    "    offset_per_activation = num_examples / activations_per_epoch\n",
+    "    \n",
     "    with tf.Session() as sess:\n",
     "        sess.run(tf.global_variables_initializer())\n",
-    "        num_examples = len(x_train)\n",
-    "\n",
-    "        print(\"Training...\")\n",
-    "        print()\n",
+    "        print(\"Training...\\n\")\n",
+    "        activations_for_epoch = [[]]\n",
+    "        \n",
+    "        activation_for_image(activations, sess, [TEST_IMAGE], CAPTURE_ACTIVATION)\n",
+    "        \n",
     "        for i in range(EPOCHS):\n",
     "            x_train, y_train = shuffle(x_train, y_train)\n",
     "            for offset in range(0, num_examples, BATCH_SIZE):\n",
     "                end = offset + BATCH_SIZE\n",
     "                batch_x, batch_y = x_train[offset:end], y_train[offset:end]\n",
     "                sess.run(training_operation, feed_dict={x: batch_x, y: batch_y})\n",
+    "                \n",
+    "#                 print(offset, offset_per_activation, len(activations_for_epoch))\n",
+    "                \n",
+    "                if offset / offset_per_activation > len(activations_for_epoch[0]):\n",
+    "                    activation_for_image(activations_for_epoch, sess, [TEST_IMAGE], CAPTURE_ACTIVATION)\n",
+    "#                     print(len(activations_for_epoch[0]))\n",
     "\n",
     "            validation_accuracy = evaluate(x_valid, y_valid)\n",
+    "            for src, dest in zip(activations_for_epoch, activations):\n",
+    "                dest.extend(src)\n",
+    "            activations_for_epoch = [[]]\n",
     "\n",
-    "            print(\"EPOCH {} ...\".format(i+1))\n",
+    "            print(\"EPOCH {} ...\".format(i + 1))\n",
     "            print(\"Validation Accuracy = {:.3f}\".format(validation_accuracy))\n",
     "            print()\n",
     "\n",
     "        saver.save(sess, './lenet')\n",
-    "        print(\"Model saved\")"
+    "        print(\"Model saved\")\n",
+    "        \n",
+    "    return activations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training...\n",
-      "\n",
-      "EPOCH 1 ...\n",
-      "Validation Accuracy = 0.796\n",
-      "\n",
-      "EPOCH 2 ...\n",
-      "Validation Accuracy = 0.911\n",
-      "\n",
-      "Model saved\n",
-      "CPU times: user 2min 11s, sys: 36.2 s, total: 2min 47s\n",
-      "Wall time: 1min 2s\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "%time train(X_train_norm, y_train, X_valid_norm, y_valid)"
+    "def show_images(images):\n",
+    "    plt.figure(1, figsize=(15,15))\n",
+    "    cols = 8\n",
+    "    rows = len(images) / cols + 1\n",
+    "    \n",
+    "    for index, img in enumerate(images):\n",
+    "        subplot = index + 1\n",
+    "        plt.subplot(rows, cols, subplot)\n",
+    "        plt.title('Image ' + str(subplot))\n",
+    "        plt.imshow(img, interpolation=\"nearest\", cmap=\"gray\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time \n",
+    "\n",
+    "activations = train(X_train_norm, y_train, X_valid_norm, y_valid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(activations[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "show_images(activations[0])"
    ]
   },
   {
@@ -323,10 +404,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "with tf.Session() as sess:\n",
+    "    saver.restore(sess, tf.train.latest_checkpoint('.'))\n",
     "    res = evaluate(X_test_norm, y_test)\n",
     "    print(\"Test accuracy = {:.3f}\".format(res))"
    ]
@@ -396,21 +480,56 @@
    },
    "outputs": [],
    "source": [
-    "def output_features(image_input, tf_activations, activation_min=None, activation_max=None, plt_num=1):\n",
+    "def output_features(image_input, tf_activation, activation_min=None, activation_max=None, plt_num=1):\n",
     "    activation = tf_activation.eval(session=sess, feed_dict={x : image_input})\n",
     "    feature_image_count = activation.shape[3]\n",
     "    plt.figure(plt_num, figsize=(15,15))\n",
-    "    fi = 0\n",
-    "    plt.subplot(6,8, featuremap+1) # sets the number of feature maps to show on each row and column\n",
-    "    plt.title('FeatureMap ' + str(featuremap)) # displays the feature map number\n",
-    "#     for fi in range(feature_image_count):\n",
-    "#         plt.subplot(6, 8, fi + 1)\n",
-    "#         plt.title('Feature')\n",
-    "    plt.imshow(activation[0,:,:, featuremap], \n",
-    "               interpolation=\"nearest\", \n",
-    "               vmin=activation_min, \n",
-    "               vmax=activation_max, \n",
-    "               cmap=\"gray\")"
+    "\n",
+    "    def show_one(image, subplot):\n",
+    "        plt.subplot(6, 8, subplot) # sets the number of feature maps to show on each row and column\n",
+    "        plt.title('FeatureMap ' + str(subplot)) # displays the feature map number\n",
+    "        ri = restore_normal(image, min_x, max_x)\n",
+    "        plt.imshow(ri, interpolation=\"nearest\", cmap=\"gray\")\n",
+    "        \n",
+    "    show_one(image_input[0], 1)\n",
+    "    for layer in range(feature_image_count):\n",
+    "        act_image = activation[0,:,:, layer]\n",
+    "        show_one(act_image, layer + 2)\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "normal_white = np.zeros(X_train[0].shape, dtype=np.uint8)\n",
+    "normal_white.fill(255)\n",
+    "WHITE, _, _ = normalize(normal_white, min_x, max_x)\n",
+    "plt.imshow(restore_normal(WHITE, min_x, max_x))\n",
+    "# plt.imshow(normal_white)\n",
+    "# restore_normal(WHITE, min_x, max_x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "normal_white"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with tf.Session() as sess:\n",
+    "    saver.restore(sess, tf.train.latest_checkpoint('.'))\n",
+    "    output_features([X_train_norm[304]], LeNet.conv1) # , 0, 100)"
    ]
   },
   {
@@ -420,12 +539,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "with tf.Session() as sess:\n",
-    "    saver.restore(sess, tf.train.latest_checkpoint('.'))\n",
-    "    output_features([X_ex1[4]], LeNet.conv1, 4) # , 0, 100)\n",
-    "    plt.show()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
