Run 20 epochs in TensorFlow and check the test accuracy

--- a/docker/notebooks/Workshop-2/3. Tensforflow for Traffic Sign Recognition.ipynb
+++ b/docker/notebooks/Workshop-2/3. Tensforflow for Traffic Sign Recognition.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
        "('Train:', 39209, 'Test:', 12630, 'Image shape:', (32, 32), 'Classes:', 43)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -314,7 +314,7 @@
    "source": [
     "from sklearn.utils import shuffle\n",
     "\n",
-    "EPOCHS = 5\n",
+    "EPOCHS = 20\n",
     "\n",
     "def train(x_train, y_train, x_valid, y_valid):\n",
     "    num_examples = x_train.shape[0]\n",
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -390,23 +390,68 @@
       "Training...\n",
       "\n",
       "EPOCH 1 ...\n",
-      "Validation Accuracy = 0.732\n",
+      "Validation Accuracy = 0.758\n",
       "\n",
       "EPOCH 2 ...\n",
-      "Validation Accuracy = 0.869\n",
+      "Validation Accuracy = 0.876\n",
       "\n",
       "EPOCH 3 ...\n",
-      "Validation Accuracy = 0.917\n",
+      "Validation Accuracy = 0.932\n",
       "\n",
       "EPOCH 4 ...\n",
       "Validation Accuracy = 0.940\n",
       "\n",
       "EPOCH 5 ...\n",
+      "Validation Accuracy = 0.946\n",
+      "\n",
+      "EPOCH 6 ...\n",
+      "Validation Accuracy = 0.964\n",
+      "\n",
+      "EPOCH 7 ...\n",
       "Validation Accuracy = 0.961\n",
       "\n",
+      "EPOCH 8 ...\n",
+      "Validation Accuracy = 0.969\n",
+      "\n",
+      "EPOCH 9 ...\n",
+      "Validation Accuracy = 0.972\n",
+      "\n",
+      "EPOCH 10 ...\n",
+      "Validation Accuracy = 0.982\n",
+      "\n",
+      "EPOCH 11 ...\n",
+      "Validation Accuracy = 0.973\n",
+      "\n",
+      "EPOCH 12 ...\n",
+      "Validation Accuracy = 0.978\n",
+      "\n",
+      "EPOCH 13 ...\n",
+      "Validation Accuracy = 0.975\n",
+      "\n",
+      "EPOCH 14 ...\n",
+      "Validation Accuracy = 0.983\n",
+      "\n",
+      "EPOCH 15 ...\n",
+      "Validation Accuracy = 0.979\n",
+      "\n",
+      "EPOCH 16 ...\n",
+      "Validation Accuracy = 0.980\n",
+      "\n",
+      "EPOCH 17 ...\n",
+      "Validation Accuracy = 0.976\n",
+      "\n",
+      "EPOCH 18 ...\n",
+      "Validation Accuracy = 0.977\n",
+      "\n",
+      "EPOCH 19 ...\n",
+      "Validation Accuracy = 0.979\n",
+      "\n",
+      "EPOCH 20 ...\n",
+      "Validation Accuracy = 0.976\n",
+      "\n",
       "Model saved\n",
-      "CPU times: user 5min 5s, sys: 53.5 s, total: 5min 59s\n",
-      "Wall time: 2min 20s\n"
+      "CPU times: user 20min 50s, sys: 3min 36s, total: 24min 26s\n",
+      "Wall time: 8min 58s\n"
      ]
     }
    ],
@@ -418,11 +463,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "201"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(activations[1])"
    ]
@@ -430,9 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "show_images(activations[0])"
@@ -447,11 +499,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Restoring parameters from ./lenet\n",
+      "Test accuracy = 0.910\n"
+     ]
+    }
+   ],
    "source": [
     "with tf.Session() as sess:\n",
     "    saver.restore(sess, tf.train.latest_checkpoint('.'))\n",
@@ -561,35 +620,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "normal_white"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "with tf.Session() as sess:\n",
     "    saver.restore(sess, tf.train.latest_checkpoint('.'))\n",
     "    output_features([X_train_norm[304]], LeNet.conv1) # , 0, 100)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
