Fix the lambda syntax to accommodate both python 2.7 and 3.5

--- a/docker/notebooks/Workshop-1/1. MNIST with LeNet-BigDL.ipynb
+++ b/docker/notebooks/Workshop-1/1. MNIST with LeNet-BigDL.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "scrolled": true
@@ -35,27 +35,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<pyspark.context.SparkContext at 0x103f6dc90>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -66,20 +55,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('Extracting', 'MNIST_data/train-images-idx3-ubyte.gz')\n",
-      "('Extracting', 'MNIST_data/train-labels-idx1-ubyte.gz')\n",
-      "('Extracting', 'MNIST_data/t10k-images-idx3-ubyte.gz')\n",
-      "('Extracting', 'MNIST_data/t10k-labels-idx1-ubyte.gz')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "MNIST_PATH = 'MNIST_data'\n",
     "(train_images, train_labels) = mnist.read_data_sets(MNIST_PATH, \"train\")\n",
@@ -88,20 +66,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((60000, 28, 28, 1), (60000,), (10000, 28, 28, 1), (10000,))"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_images.shape, train_labels.shape, test_images.shape, test_labels.shape"
    ]
@@ -115,56 +82,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3243\n",
-      "8\n",
-      "[[  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0]\n",
-      " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0]\n",
-      " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0]\n",
-      " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0]\n",
-      " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0  28 127 209 216  83   0   0   0   0   0   0   0]\n",
-      " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0  16 103 232 253 253 253 245  33   0   0   0   0   0   0]\n",
-      " [  0   0   0   0   0   0   0   0   0   0   0   0   0  13 213 254 253 228 112 253 235  27   0   0   0   0   0   0]\n",
-      " [  0   0   0   0   0   0   0   0   0   0   0   0   0 220 253 244 124 138 237 222  53   0   0   0   0   0   0   0]\n",
-      " [  0   0   0   0   0   0   0   0   0   0   0   0  99 248 253  83   0 108 140  14   0   0   0   0   0   0   0   0]\n",
-      " [  0   0   0   0   0   0   0   0   0   0   0  20 254 254  96   0   0   0   0   0   0   0   0   0   0   0   0   0]\n",
-      " [  0   0   0   0   0   0   0   0   0   0   0  28 253 219   9   0   0   0   0   0  58  11   0   0   0   0   0   0]\n",
-      " [  0   0   0   0   0   0   0   0   0   0   0 118 253 183   0   0   0   0  13 116 254  68   0   0   0   0   0   0]\n",
-      " [  0   0   0   0   0   0   0   0   0   0   0 118 253 117   0   0   0  58 192 253  95   3   0   0   0   0   0   0]\n",
-      " [  0   0   0   0   0   0   0   0   0   0   0 118 253 117   0   0 128 235 237  80   0   0   0   0   0   0   0   0]\n",
-      " [  0   0   0   0   0   0   0   0   0   0   0 118 254 223  97 217 249 165  45   0   0   0   0   0   0   0   0   0]\n",
-      " [  0   0   0   0   0   0   0   0   0   0   0 118 253 253 253 241 103   0   0   0   0   0   0   0   0   0   0   0]\n",
-      " [  0   0   0   0   0   0   0   0   0   0   0  80 253 253 222  30   0   0   0   0   0   0   0   0   0   0   0   0]\n",
-      " [  0   0   0   0   0   0   0   0   0   0  47 228 253 253  65   0   0   0   0   0   0   0   0   0   0   0   0   0]\n",
-      " [  0   0   0   0   0   0   0   0   0  38 231 253 253 253  58   0   0   0   0   0   0   0   0   0   0   0   0   0]\n",
-      " [  0   0   0   0   0   0   0   0  10 171 255 249 236 254  58   0   0   0   0   0   0   0   0   0   0   0   0   0]\n",
-      " [  0   0   0   0   0   0   0   0 123 253 249 103 175 253  58   0   0   0   0   0   0   0   0   0   0   0   0   0]\n",
-      " [  0   0   0   0   0   0   0   0 166 253 195  14 229 253  58   0   0   0   0   0   0   0   0   0   0   0   0   0]\n",
-      " [  0   0   0   0   0   0   0   0 219 253 249 235 253 201  27   0   0   0   0   0   0   0   0   0   0   0   0   0]\n",
-      " [  0   0   0   0   0   0   0   0 136 253 254 245 126   5   0   0   0   0   0   0   0   0   0   0   0   0   0   0]\n",
-      " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0]\n",
-      " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0]\n",
-      " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0]\n",
-      " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0]]\n"
-     ]
-    },
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAP8AAAD8CAYAAAC4nHJkAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAADW9JREFUeJzt3X+MFPUZx/HPo6UaFaMURSJaMMFGMRGTkzRWGxorocaI\nYoJi0qBeeiSiVNOYEk0s2Chqik3jH0ZUBBuLNJ4/iGk0gqa2plFP4w/Uiic5FESuRCPgL1Cf/nGD\nOfXmu8vuzM4ez/uVbG53np2ZJxs+fGd3Zvdr7i4A8exXdQMAqkH4gaAIPxAU4QeCIvxAUIQfCIrw\nA0ERfiAowg8E9YNW7szMuJwQKJm7Wz3Pa2rkN7PpZvaWmfWa2YJmtgWgtazRa/vNbH9J6yWdJWmT\npBckzXb3NxLrMPIDJWvFyD9FUq+7b3D3XZIekDSjie0BaKFmwn+0pPcGPd6ULfsWM+sysx4z62li\nXwAKVvoHfu6+VNJSicN+oJ00M/JvlnTMoMfjsmUAhoFmwv+CpIlmNsHMfijpIkmri2kLQNkaPux3\n9y/N7ApJT0jaX9Iyd3+9sM4AlKrhU30N7Yz3/EDpWnKRD4Dhi/ADQRF+ICjCDwRF+IGgCD8QFOEH\ngiL8QFCEHwiK8ANBEX4gKMIPBEX4gaAIPxAU4QeCIvxAUIQfCIrwA0ERfiAowg8ERfiBoFo6RTfi\nGTduXG6ts7Mzue7MmTOT9QMOOCBZv+6663Jr3d3dyXUjYOQHgiL8QFCEHwiK8ANBEX4gKMIPBEX4\ngaCamqXXzPok7ZD0laQv3b2jxvOZpXeYOeyww5L1Cy+8MFlftGhRbu2II45oqKd6ff7557m1SZMm\nJdft6+sruJvWqXeW3iIu8vmFu28rYDsAWojDfiCoZsPvktaY2Ytm1lVEQwBao9nD/tPdfbOZHSnp\nSTP7r7s/M/gJ2X8K/McAtJmmRn5335z97Zf0sKQpQzxnqbt31PowEEBrNRx+MzvYzEbuuS9pmqR1\nRTUGoFzNHPaPkfSwme3Zzt/c/fFCugJQuobD7+4bJJ1cYC+owMiRI5P1Z599Nlk/4YQTkvXUdSTv\nv/9+ct0lS5Y0Vf/0009za7t3706uGwGn+oCgCD8QFOEHgiL8QFCEHwiK8ANBNfWV3r3eGV/pbTu9\nvb3J+oQJE5L11Ok0Sbrllltya4ceemhy3Vo/7f3xxx8n67Nmzcqt9fT0JNcdzur9Si8jPxAU4QeC\nIvxAUIQfCIrwA0ERfiAowg8ExRTd+7ha58pTU2jX45JLLknWU1NhX3HFFcl177333mT9hhtuSNa3\nb9+erEfHyA8ERfiBoAg/EBThB4Ii/EBQhB8IivADQfF9/n3A6NGjc2v9/f1Nbfuyyy5L1pcvX97U\n9lE8vs8PIInwA0ERfiAowg8ERfiBoAg/EBThB4Kq+X1+M1sm6RxJ/e5+UrZslKRVksZL6pM0y90/\nKq9NpBx44IG5tVrXcWzYsCFZX7VqVUM9tYPTTjstt/bKK68k1/3kk0+Kbqft1DPyL5c0/TvLFkha\n6+4TJa3NHgMYRmqG392fkfThdxbPkLQiu79C0nkF9wWgZI2+5x/j7luy+x9IGlNQPwBapOnf8HN3\nT12zb2Zdkrqa3Q+AYjU68m81s7GSlP3N/faIuy919w5372hwXwBK0Gj4V0uak92fI+nRYtoB0Co1\nw29mKyX9R9JPzGyTmXVKulnSWWb2tqRfZo8BDCM13/O7++yc0pkF94IGXXzxxQ2v29vbm6x/9tln\nDW+7WSNHjkzW586dm6zfeuutubVp06Yl112zZk2yvi/gCj8gKMIPBEX4gaAIPxAU4QeCIvxAUEzR\nHdxTTz1V2b5TX7mVpJtuuilZP+OMM5L1Sy+9NLf29NNPJ9eNgJEfCIrwA0ERfiAowg8ERfiBoAg/\nEBThB4LiPD9KtXDhwtzavHnzkuvut196bLrggguS9UceeSRZj46RHwiK8ANBEX4gKMIPBEX4gaAI\nPxAU4QeC4jz/Ps7MkvXLL788Wd+2bVuyvmBBeoLm8ePH59YefPDB5LqLFy9O1tetW5esI42RHwiK\n8ANBEX4gKMIPBEX4gaAIPxAU4QeCqnme38yWSTpHUr+7n5QtWyjpN5L+lz3tWnf/R1lNonHunqwf\ne+yxyfrdd9+drO/cuTNZnz9/fm7tzjvvTK6LctUz8i+XNH2I5X9298nZjeADw0zN8Lv7M5I+bEEv\nAFqomff8V5rZq2a2zMwOL6wjAC3RaPjvkHScpMmStkhakvdEM+sysx4z62lwXwBK0FD43X2ru3/l\n7l9LukvSlMRzl7p7h7t3NNokgOI1FH4zGzvo4fmS+HoVMMzUc6pvpaSpkkab2SZJf5A01cwmS3JJ\nfZLmltgjgBLUDL+7zx5i8T0l9IIGrV+/vrRtb9y4MVmfOnVqsv7uu+8W2A2KxBV+QFCEHwiK8ANB\nEX4gKMIPBEX4gaD46e5h4OSTT07Wb7/99tL23dnZmaxzKm/4YuQHgiL8QFCEHwiK8ANBEX4gKMIP\nBEX4gaA4z98Gjj/++GT98ccfT9aPPPLIItv5li+++KK0baNajPxAUIQfCIrwA0ERfiAowg8ERfiB\noAg/EBTn+VvgoIMOStZvvPHGZP2oo45K1nft2pVb27FjR3LdUaNGJevYdzHyA0ERfiAowg8ERfiB\noAg/EBThB4Ii/EBQNc/zm9kxku6TNEaSS1rq7n8xs1GSVkkaL6lP0ix3/6i8Voevq6++OlmfOXNm\nsp46jy9J8+fPz61Nnz49ue65556brGPfVc/I/6Wk37n7iZJ+KmmemZ0oaYGkte4+UdLa7DGAYaJm\n+N19i7u/lN3fIelNSUdLmiFpRfa0FZLOK6tJAMXbq/f8ZjZe0imSnpM0xt23ZKUPNPC2AMAwUfe1\n/WZ2iKRuSVe5+3Yz+6bm7m5mnrNel6SuZhsFUKy6Rn4zG6GB4N/v7g9li7ea2disPlZS/1DruvtS\nd+9w944iGgZQjJrht4Eh/h5Jb7r7bYNKqyXNye7PkfRo8e0BKEs9h/0/k/RrSa+Z2cvZsmsl3Szp\n72bWKWmjpFnltDj8TZo0qan1n3/++WR95cqVubXrr7++qX1j31Uz/O7+b0mWUz6z2HYAtApX+AFB\nEX4gKMIPBEX4gaAIPxAU4QeC4qe7W+DUU09tav0pU6Yk6++8805urdZPc/f09CTrGzduTNYxfDHy\nA0ERfiAowg8ERfiBoAg/EBThB4Ii/EBQnOdvge7u7mT9mmuuSdZHjBiRrKemAF+0aFFy3cWLFyfr\nu3fvTtYxfDHyA0ERfiAowg8ERfiBoAg/EBThB4Ii/EBQ5j7kLFvl7CxnSi8AxXH3vJ/a/xZGfiAo\nwg8ERfiBoAg/EBThB4Ii/EBQhB8Iqmb4zewYM3vazN4ws9fN7LfZ8oVmttnMXs5uZ5ffLoCi1LzI\nx8zGShrr7i+Z2UhJL0o6T9IsSTvd/U9174yLfIDS1XuRT81f8nH3LZK2ZPd3mNmbko5urj0AVdur\n9/xmNl7SKZKeyxZdaWavmtkyMzs8Z50uM+sxs/S8UABaqu5r+83sEEn/lHSjuz9kZmMkbZPkkv6o\ngbcGl9XYBof9QMnqPeyvK/xmNkLSY5KecPfbhqiPl/SYu59UYzuEHyhZYV/sMTOTdI+kNwcHP/sg\ncI/zJa3b2yYBVKeeT/tPl/QvSa9J+jpbfK2k2ZIma+Cwv0/S3OzDwdS2GPmBkhV62F8Uwg+Uj+/z\nA0gi/EBQhB8IivADQRF+ICjCDwRF+IGgCD8QFOEHgiL8QFCEHwiK8ANBEX4gKMIPBFXzBzwLtk3S\nxkGPR2fL2lG79taufUn01qgie/txvU9s6ff5v7dzsx5376isgYR27a1d+5LorVFV9cZhPxAU4QeC\nqjr8Syvef0q79taufUn01qhKeqv0PT+A6lQ98gOoSCXhN7PpZvaWmfWa2YIqeshjZn1m9lo283Cl\nU4xl06D1m9m6QctGmdmTZvZ29nfIadIq6q0tZm5OzCxd6WvXbjNet/yw38z2l7Re0lmSNkl6QdJs\nd3+jpY3kMLM+SR3uXvk5YTP7uaSdku7bMxuSmd0q6UN3vzn7j/Nwd/99m/S2UHs5c3NJveXNLH2J\nKnztipzxughVjPxTJPW6+wZ33yXpAUkzKuij7bn7M5I+/M7iGZJWZPdXaOAfT8vl9NYW3H2Lu7+U\n3d8hac/M0pW+dom+KlFF+I+W9N6gx5vUXlN+u6Q1ZvaimXVV3cwQxgyaGekDSWOqbGYINWdubqXv\nzCzdNq9dIzNeF40P/L7vdHefLOlXkuZlh7dtyQfes7XT6Zo7JB2ngWnctkhaUmUz2czS3ZKucvft\ng2tVvnZD9FXJ61ZF+DdLOmbQ43HZsrbg7puzv/2SHtbA25R2snXPJKnZ3/6K+/mGu29196/c/WtJ\nd6nC1y6bWbpb0v3u/lC2uPLXbqi+qnrdqgj/C5ImmtkEM/uhpIskra6gj+8xs4OzD2JkZgdLmqb2\nm314taQ52f05kh6tsJdvaZeZm/NmllbFr13bzXjt7i2/STpbA5/4vyPpuip6yOnrOEmvZLfXq+5N\n0koNHAbu1sBnI52SfiRpraS3Ja2RNKqNevurBmZzflUDQRtbUW+na+CQ/lVJL2e3s6t+7RJ9VfK6\ncYUfEBQf+AFBEX4gKMIPBEX4gaAIPxAU4QeCIvxAUIQfCOr/loI/2cB1bNIAAAAASUVORK5CYII=\n",
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x1069ed550>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.set_printoptions(threshold=1000, linewidth=10000)\n",
     "\n",
@@ -182,20 +102,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "CLASS_COUNT = len(np.unique(train_labels))\n",
     "assert len(np.unique(train_labels)) == CLASS_COUNT\n",
@@ -204,20 +113,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9], dtype=uint8)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.unique(train_labels)"
    ]
@@ -234,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -251,8 +149,8 @@
     "\n",
     "    rdd_sample = rdd_images \\\n",
     "        .zip(rdd_labels) \\\n",
-    "        .map(lambda (features, label): \\\n",
-    "             Sample.from_ndarray((features - min_x) * (b - a) / delta, label + 1))\n",
+    "        .map(lambda features_labels: \\\n",
+    "             Sample.from_ndarray((features_labels[0] - min_x) * (b - a) / delta, features_labels[1] + 1))\n",
     "    return rdd_sample, min_x, max_x"
    ]
   },
@@ -266,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -284,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -295,8 +193,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# X_test_norm.shape"
@@ -311,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -322,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -333,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -369,29 +269,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "creating: createSequential\n",
-      "creating: createReshape\n",
-      "creating: createSpatialConvolution\n",
-      "creating: createReLU\n",
-      "creating: createSpatialMaxPooling\n",
-      "creating: createSpatialConvolution\n",
-      "creating: createReLU\n",
-      "creating: createSpatialMaxPooling\n",
-      "creating: createReshape\n",
-      "creating: createLinear\n",
-      "creating: createReLU\n",
-      "creating: createLinear\n",
-      "creating: createLogSoftMax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "lenet_model = LeNet(CLASS_COUNT)"
    ]
@@ -405,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -423,21 +303,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "creating: createClassNLLCriterion\n",
-      "creating: createDefault\n",
-      "creating: createSGD\n",
-      "creating: createMaxEpoch\n",
-      "creating: createOptimizer\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "optimizer = Optimizer(model=lenet_model, training_rdd=X_train_norm,\n",
     "                      criterion=ClassNLLCriterion(),\n",
@@ -448,18 +316,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "creating: createEveryEpoch\n",
-      "creating: createTop1Accuracy\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Set the validation logic\n",
     "optimizer.set_validation(batch_size=128, val_rdd=X_test_norm,\n",
@@ -469,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -490,18 +349,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "creating: createTrainSummary\n",
-      "creating: createSeveralIteration\n",
-      "creating: createValidationSummary\n",
-      "('saving logs to ', 'lenet5-')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_summary = TrainSummary(log_dir=LOG_DIR, app_name=APP_NAME)\n",
     "train_summary.set_summary_trigger(\"Parameters\", SeveralIteration(10)) \n",
