Fix tensorboard in lenet notebook

--- a/Workshop-1/1. MNIST with LeNet-BigDL.ipynb
+++ b/Workshop-1/1. MNIST with LeNet-BigDL.ipynb
@@ -272,7 +272,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "EPOCHS = 3"
+    "EPOCHS = 5"
    ]
   },
   {
@@ -314,13 +314,19 @@
    "outputs": [],
    "source": [
     "import shutil\n",
-    "from os import path\n",
     "\n",
-    "LOG_DIR = '/tmp/bigdl_summaries'\n",
-    "APP_NAME='lenet5-' # + datetime.now().strftime(\"%Y%m%d-%H%M%S\")\n",
+    "tensorboard_dir=os.environ.get('TENSORBOARD_DIR', '/tmp/tensorboard-logs')\n",
+    "print(\"TENSORBOARD_DIR : \", tensorboard_dir)\n",
+    "\n",
+    "app_name='lenet5' #+dt.datetime.now().strftime(\"%Y%m%d-%H%M%S\")\n",
+    "base_path = os.path.abspath(os.path.join(tensorboard_dir, app_name))\n",
+    "\n",
+    "# clean old logs\n",
     "try:\n",
-    "    shutil.rmtree('/private' + LOG_DIR + '/' + APP_NAME)\n",
-    "except:\n",
+    "    print (\"Cleaning : \", base_path)\n",
+    "    shutil.rmtree(base_path)\n",
+    "except OSError as e:\n",
+    "    print (e)\n",
     "    pass"
    ]
   },
@@ -330,12 +336,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_summary = TrainSummary(log_dir=LOG_DIR, app_name=APP_NAME)\n",
+    "train_summary = TrainSummary(log_dir=tensorboard_dir, app_name=app_name)\n",
     "train_summary.set_summary_trigger(\"Parameters\", SeveralIteration(10)) \n",
-    "val_summary = ValidationSummary(log_dir=LOG_DIR, app_name=APP_NAME)\n",
+    "val_summary = ValidationSummary(log_dir=tensorboard_dir, app_name=app_name)\n",
     "optimizer.set_train_summary(train_summary)\n",
     "optimizer.set_val_summary(val_summary)\n",
-    "print(\"saving logs to \", APP_NAME)"
+    "print(\"saving logs to \", app_name)"
    ]
   },
   {
@@ -423,21 +429,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.5"
   }
  },
  "nbformat": 4,
