Fix the imports

--- a/Workshop-1/2. Transfer - Flowers - Analytics Zoo.ipynb
+++ b/Workshop-1/2. Transfer - Flowers - Analytics Zoo.ipynb
@@ -541,7 +541,7 @@
    "outputs": [],
    "source": [
     "from bigdl.optim.optimizer import EveryEpoch, Top1Accuracy, \\\n",
-    "    TrainSummary, SeveralIteration, ValidationSummary, \n",
+    "    TrainSummary, SeveralIteration, ValidationSummary\n",
     "\n",
     "classifier.setValidation(EveryEpoch(), \\\n",
     "                        validationDF, \\\n",
@@ -618,16 +618,6 @@
    "outputs": [],
    "source": [
     "results = predDF.select(\"name\", \"label\", \"prediction\").cache()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# predDF.unpersist()\n",
-    "# predDF.drop()"
    ]
   },
   {
