Modify Lenet notebook

--- a/Workshop-1/other/inst/1. MNIST with LeNet-BigDL.ipynb
+++ b/Workshop-1/other/inst/1. MNIST with LeNet-BigDL.ipynb
@@ -204,7 +204,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = Sequential()"
+    "# samples = X_test_norm.collect()"
    ]
   },
   {
@@ -213,7 +213,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.add(Reshape([1, 28, 28]))"
+    "# samples[0]"
    ]
   },
   {
@@ -222,44 +222,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convolution, 6 output, 5x5\n",
-    "model.add(SpatialConvolution(, , , ).set_name('conv1'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.add(ReLU())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 2 x 2\n",
-    "model.add(SpatialMaxPooling(, , , ).set_name('pool1')) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 16 output, 5x5\n",
-    "model.add(SpatialConvolution(, , , ).set_name('conv2'))"
+    "def LeNet(class_num):\n",
+    "    model = Sequential()\n",
+    "    model.add(Reshape([1, 28, 28]))\n",
+    "    \n",
+    "    model.add(SpatialConvolution(1, 6, 5, 5).set_name('conv1'))\n",
+    "    model.add(ReLU())\n",
+    "    \n",
+    "    model.add(SpatialMaxPooling(2, 2, 2, 2).set_name('pool1'))\n",
+    "    \n",
+    "    model.add(SpatialConvolution(6, 16, 5, 5).set_name('conv2'))\n",
+    "    model.add(ReLU())\n",
+    "    \n",
+    "    model.add(SpatialMaxPooling(2, 2, 2, 2).set_name('pool2'))\n",
+    "    \n",
+    "    model.add(Reshape([16 * 4 * 4]))\n",
+    "    \n",
+    "    model.add(Linear(16 * 4 * 4, 84).set_name('fc1'))\n",
+    "    model.add(ReLU())\n",
+    "\n",
+    "#     model.add(Linear(120, 84).set_name('fc2'))\n",
+    "#     model.add(ReLU())\n",
+    "\n",
+    "    model.add(Linear(84, class_num).set_name('score'))\n",
+    "    model.add(LogSoftMax())\n",
+    "    \n",
+    "    return model"
    ]
   },
   {
@@ -268,64 +256,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.add(ReLU())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.add(SpatialMaxPooling(, , , ).set_name('pool2'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.add(Reshape([16 * 4 * 4]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Linear classifier, 84 output cells\n",
-    "model.add(Linear(, ).set_name('fc1'))\n",
-    "model.add(ReLU())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Second layer of linear classifier\n",
-    "model.add(Linear(, ).set_name('score'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.add(LogSoftMax())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lenet_model = model"
+    "lenet_model = LeNet(CLASS_COUNT)"
    ]
   },
   {
